# newsletter-crewai

./: pyproject.toml
src/newsletter/: crew.py  main.py
src/newsletter/config/src/newsletter_gen/config/: newsletter.html
src/newsletter/tools/: custom_tool.py
