[tool.poetry]
name = "newsletter"
version = "0.1.0"
description = "newsletter using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
exa-py = "^1.0.9"
crewai = {version = "^0.28.7", extras = ["tools"]}


[tool.poetry.scripts]
newsletter = "newsletter.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"